--- a/mobile/resources/css/gu.renew.mixin.scss
+++ b/mobile/resources/css/gu.renew.mixin.scss
@@ -69,3 +69,10 @@ $bgcolor: #e6edf8;
 	}
 }
 
+@mixin ellipsis(){
+	text-overflow:ellipsis;
+	white-space:nowrap;
+	word-wrap:normal;
+	overflow:hidden;
+}
+
