--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -563,34 +563,49 @@ font-size: $fz12px;
 			&:last-child{
 				border-bottom: none;
 			}
-			&:after{
-				position: absolute;
-				bottom: 40px;
-				right:15px;
-				display: inline-block;
-				content: "";
-				width: 24px;
-				height: 9px;
-				background: url(/resources/images/gu.renew.contents/icon_arrow.png) no-repeat 0 0;
-				background-size: 100% auto;
+			.logo{
+				&:after{
+					position: absolute;
+					top: -18px;
+					right:0px;
+					display: inline-block;
+					content: "";
+					width: 24px;
+					height: 9px;
+					background: url(/resources/images/gu.renew.contents/icon_arrow.png) no-repeat 0 0;
+					background-size: 100% auto;
+				}
 			}
 		}
 	}
 
 	&.check_list {
+		.list_box{
+			border:none;
+			border-radius: 0;
+		}
+
 		.insurance {
-			&:before {
-				display: none;
+			width:100%;
+			margin-bottom: 0px;
+			border: 1px solid #d5d5d5;
+			border-radius: 8px;
+			margin-bottom: 10px;
+			padding: 10px 15px 10px 20px;
+
+			&:last-child{
+				border-bottom: 1px solid #d5d5d5;
 			}
 
 			&:after {
 				display: block;
 				position: absolute;
-				top: 0;
-				left: 0;
-				width: 41px;
-				height: 41px;
+				top: -1px;
+				left: -1px;
+				width: 31px;
+				height: 31px;
 				background: url(/resources/images/gu.renew.common/checkbox02_off.png) no-repeat 0 0;
+				background-size:100% auto;
 				content: "";
 			}
 
@@ -611,6 +626,7 @@ font-size: $fz12px;
 
 				&:after {
 					background: url(/resources/images/gu.renew.common/checkbox02_on.png) no-repeat 0 0;
+					background-size:100% auto;
 				}
 			}
 		}
@@ -669,6 +685,7 @@ font-size: $fz12px;
 
 				.date {
 					letter-spacing: -0.05em;
+					font-size: $fz12px;
 					color: $color_level4;
 				}
 			}
@@ -678,7 +695,7 @@ font-size: $fz12px;
 			display: block;
 			position: absolute;
 			right: 15px;
-			bottom: 12px;
+			top: 55px;
 			height: 18px;
 
 			img {
