모바일 작업

--- a/mobile/resources/css/gu.renew.common.scss
+++ b/mobile/resources/css/gu.renew.common.scss
@@ -694,19 +694,20 @@ input[type=text]::-ms-clear {
 .info_grid {
 	ul {
 		@include clearline;
+		display: flex;
 
 		li {
-			float: left;
-
+			font-size: $fz12px;
 			&.title {
-				width: 68px;
-
+				width: 60px;
+				flex:none;
 				&.black {
 					color: $color_level2;
 				}
 			}
 
 			&.text {
+				flex:1;
 				color: $color_point1;
 			}
 		}
@@ -730,6 +731,7 @@ input[type=text]::-ms-clear {
 
 	&.big {
 		ul {
+			display: block;
 			margin-bottom: 20px;
 
 			&:last-child {
@@ -737,14 +739,12 @@ input[type=text]::-ms-clear {
 			}
 
 			li {
+				float: none;
 				font-size: $fz24px;
-
 				line-height: $fz24px;
-
 				letter-spacing: -0.05em;
-
 				&.title {
-					width: 100px;
+					width: auto;
 					font-size: $fz16px;
 				}
 
@@ -762,28 +762,26 @@ input[type=text]::-ms-clear {
 
 	&.right {
 		ul {
-			margin-bottom: 12px;
+			margin-bottom: 15px;
 
 			&:last-child {
 				margin-bottom: 0;
 			}
 
 			li {
-				line-height: $fz16px;
-
+				line-height:14px;
 				letter-spacing: -0.05em;
 
 				&.title {
-					width: 100px;
-					font-size: $fz16px;
+					width: 60px;
+					font-size: $fz12px;
 					color: $color_level5;
 				}
 
 				&.text {
-					width: 150px;
 					text-align: right;
+					font-size: $fz14px;
 					color: $color_level2;
-
 					strong {
 						font-weight: 500;
 					}
