--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -1357,164 +1357,6 @@ font-size: $fz12px;
 	}
 }
 
-/*팝업 컨설팅 전후 비교*/
-.consulting_wrap {
-	width: 700px;
-
-	> .title {
-		margin-top: 33px;
-		font-size: $fz30px;
-		font-weight: 300;
-		line-height: $fz40px;
-		text-align: center;
-		letter-spacing: -2px;
-		color: $color_level2;
-
-		strong {
-			font-weight: 500;
-		}
-
-		.icon {
-			display: inline-block;
-			height: 34px;
-			transform: translate(0, 3px);
-			vertical-align: top;
-		}
-	}
-
-	> .text {
-		margin-top: 22px;
-		font-size: $fz24px;
-		font-weight: 300;
-		text-align: center;
-		letter-spacing: -2px;
-		color: $color_button_red;
-	}
-
-	.box_area {
-		margin-top: 20px;
-		@include clearline;
-		border: 1px solid $line_color3;
-		border-radius: 10px;
-
-		.box {
-			position: relative;
-			float: left;
-			width: 50%;
-			height: 581px;
-			margin: -1px 0;
-			border: 2px solid transparent;
-			text-align: center;
-
-			&.after {
-				border: 2px solid #3c454e;
-				border-radius: 10px;
-				background: #f8f8f8;
-			}
-
-			> .title {
-				margin-top: 33px;
-				font-size: $fz20px;
-				line-height: $fz30px;
-				text-align: center;
-				color: $color_level2;
-
-				.icon {
-					display: inline-block;
-					height: 34px;
-					transform: translate(0, 3px);
-					vertical-align: top;
-				}
-			}
-
-			.info_grid {
-				position: relative;
-				width: 250px;
-				margin: 25px auto 15px auto;
-				padding-bottom: 48px;
-				text-align: left;
-
-				&:after {
-					display: block;
-					position: absolute;
-					right: 0;
-					bottom: 0px;
-					left: 0;
-					width: 36px;
-					height: 3px;
-					margin: 0 auto;
-					border-radius: 3px;
-					background: #01a7c4;
-					content: "";
-				}
-			}
-
-			.graph_area {
-				position: relative;
-				height: 217px;
-
-				&:after {
-					display: block;
-					position: absolute;
-					z-index: 1;
-					top: 0;
-					left: 0;
-					width: 100%;
-					height: 100%;
-					background: #fff;
-					content: "";
-					opacity: 0;
-				}
-			}
-
-			.info_box {
-				display: table;
-				margin: 25px auto 0 auto;
-				padding: 18px 20px;
-				border: 1px solid $line_color2;
-				border-radius: 13px;
-				font-size: 0;
-				line-height: 1;
-				text-align: center;
-
-				li {
-					display: inline-block;
-					padding: 0 18px;
-					line-height: 1;
-					text-align: center;
-
-					.tit {
-						display: block;
-						font-size: $fz16px;
-					}
-
-					.number {
-						display: block;
-						margin-top: 8px;
-						font-size: $fz24px;
-						font-weight: 700;
-					}
-
-					&.all {
-						color: $color_level2;
-					}
-
-					&.no {
-						color: #7c838f;
-					}
-
-					&.lack {
-						color: $color_button_red;
-					}
-
-					&.good {
-						color: #01a7c4;
-					}
-				}
-			}
-		}
-	}
-}
 
 /*그래프*/
 .consulting_list {
@@ -2130,6 +1972,7 @@ font-size: $fz12px;
 	}
 	.content_area_sub{
 		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 }
 .insurance_detail_info{
@@ -2400,6 +2243,313 @@ font-size: $fz12px;
 					}
 				}
 			}
+		}
+	}
+}
+
+
+/*팝업 컨설팅 전후 비교*/
+.consulting_wrap {
+	padding:0 17px;
+	>.name {
+		text-align: center;
+		font-size: $fz16px;
+		line-height: $fz20px;
+		letter-spacing: -1px;
+		color: $color_level2;
+		margin-bottom: 20px;
+	}
+	.consulting_top_box {
+		display: flex;
+		width: 100%;
+		margin-bottom: 10px;
+		background: #ffffff;
+		border-radius:10px;
+		> li {
+			&.before,
+			&.after {
+				width: 50%;
+				position: relative;
+				padding: 20px 0;
+				line-height: 1;
+				vertical-align: top;
+				> .title {
+					margin-bottom: 19px;
+					font-size: $fz14px;
+					text-align: center;
+					color: $color_level2;
+				}
+
+				> .list {
+					padding:0 20px 0 15px;
+					letter-spacing:-1px;
+					color: $color_level4;
+
+					> li {
+						margin-bottom: 14px;
+						line-height: 16px;
+						display: flex;
+						&:last-child {
+							margin-bottom: 0;
+						}
+						.title {
+							font-size: $fz12px;
+							text-align: left;
+						}
+
+						.result {
+							flex:1;
+							text-align: right;
+							font-size: $fz16px;
+						}
+					}
+				}
+			}
+
+			&.after {
+				> .list {
+					padding: 0 15px 0 20px;
+				}
+				&:before {
+					display: block;
+					position: absolute;
+					z-index: 1;
+					top: 50%;
+					left: -13px;
+					width: 26px;
+					height: 26px;
+					margin-top: -13px;
+					background: url("/resources/images/gu.renew.contents/icon_consulting_after.png") no-repeat;
+					background-size: 100% auto;
+					content: "";
+				}
+
+				&:after {
+					display: block;
+					position: absolute;
+					top: -1px;
+					bottom: -1px;
+					left: 0;
+					width: calc(100% - 2px);
+					height: calc(100% - 2px);
+					border: 2px solid #fe5855;
+					border-radius: 5px;
+					content: "";
+				}
+
+				> .list {
+					> li {
+						.result {
+							color: $color_level2;
+						}
+					}
+				}
+			}
+		}
+	}
+	.consulting_item_box{
+		border-radius:10px;
+		background: #ffffff;
+		&.nodata{
+			background: none;
+			border:1px solid #d5d5d5;
+			font-size: $fz16px;
+			line-height: 23px;
+			text-align: center;
+			padding:20px 0;
+			color: $color_level4;
+		}
+		.sort_title{
+			line-height: 36px;
+			border-bottom: 1px solid #d5d5d5;
+			padding:0 29px 0 0;
+			text-align: right;
+			display: table;
+			font-size: 0;
+			width: 100%;
+			li{
+				vertical-align: top;
+				display: inline-block;
+				width: 90px;
+				text-align: center;
+				font-size: $fz12px;
+				color: $color_level2;
+			}
+		}
+		.consulting_item_area{
+			padding:0 15px;
+			.consulting_item {
+				border-bottom: 1px solid #ededed;
+				.toggle_btn_area {
+					display: block;
+					position: relative;
+					width: 100%;
+					height: 44px;
+
+					&:after {
+						display: block;
+						position: absolute;
+						top: 50%;
+						right: 0px;
+						width: 16px;
+						height: 9px;
+						margin-top: -4px;
+						background: url("/resources/images/gu.renew.contents/icon_toggle_arr_down.png") no-repeat;
+						background-size: 16px auto;
+						content: '';
+					}
+				}
+
+				&.active .toggle_btn_area:after {
+					background-image: url("/resources/images/gu.renew.contents/icon_toggle_arr_up.png");
+				}
+
+				.toggle_content_area {
+					display: none;
+					border-top: 1px dotted $line_color3;
+
+					.reslut_list {
+						padding: 10px 0;
+					}
+				}
+
+				.list_item {
+					display: flex;
+					align-self:center;
+					width: 100%;
+					padding-right: 13px;
+					> li {
+						position: relative;
+						vertical-align: middle;
+						letter-spacing: -1px;
+
+						&.title {
+							flex:1;
+							padding-left: 25px;
+							font-size: $fz14px;
+							line-height: 1;
+							color: $color_level2;
+						}
+
+						&.before,
+						&.after {
+							flex:none;
+							position: relative;
+							width: 90px;
+							padding-right: 12px;
+							font-size: $fz16px;
+							line-height: 1;
+							text-align: right;
+							color: $color_level4;
+						}
+
+					}
+
+					&.down {
+						li.title:after {
+							display: block;
+							position: absolute;
+							top: 50%;
+							left: 0;
+							width: 14px;
+							height: 14px;
+							margin-top: -7px;
+							background: url("/resources/images/gu.renew.contents/icon_big_down.png") no-repeat;
+							background-size: 14px auto;
+							content: '';
+						}
+
+						li.after {
+							color: #01a7c4;
+						}
+					}
+
+					&.up {
+						li.title:after {
+							display: block;
+							position: absolute;
+							top: 50%;
+							left: 0px;
+							width: 14px;
+							height: 14px;
+							margin-top: -7px;
+							background: url("/resources/images/gu.renew.contents/icon_big_up.png") no-repeat;
+							background-size: 14px auto;
+							content: '';
+						}
+
+						li.after {
+							color: #fe5855;
+						}
+					}
+				}
+			}
+
+			.small {
+				.list_item {
+					height: 23px;
+					li.title {
+						position: relative;
+						font-size: $fz12px;
+						color: $color_level4;
+						align-self:center;
+					}
+					li.before,
+					li.after,{
+						align-self:center;
+						font-size: $fz14px;
+						strong{
+							font-weight: 400;
+						}
+					}
+
+					&.same {
+						li.title:after {
+							display: block;
+							position: absolute;
+							top: 50%;
+							left: 0px;
+							width: 15px;
+							height: 15px;
+							margin-top: -8px;
+							background: url("/resources/images/gu.renew.contents/icon_small_same.png") no-repeat center center;
+							background-size: 15px auto;
+							content: '';
+						}
+					}
+
+					&.down {
+						li.title:after {
+							display: block;
+							position: absolute;
+							top: 50%;
+							left: 0;
+							width: 15px;
+							height: 15px;
+							margin-top: -8px;
+							background: url("/resources/images/gu.renew.contents/icon_small_down.png") no-repeat center center;
+							background-size: 15px auto;
+							content: '';
+						}
+					}
+
+					&.up {
+						li.title:after {
+							display: block;
+							position: absolute;
+							top: 50%;
+							left: 0px;
+							width: 15px;
+							height: 15px;
+							margin-top: -8px;
+							background: url("/resources/images/gu.renew.contents/icon_small_up.png") no-repeat center center;
+							background-size: 15px auto;
+							content: '';
+						}
+					}
+				}
+			}
+
 		}
 	}
 }
