--- a/mobile/resources/css/gu.renew.contents.scss
+++ b/mobile/resources/css/gu.renew.contents.scss
@@ -483,8 +483,7 @@
 					height: 100%;
 					border: 1px solid #fd5856;
 					border-radius: 8px;
-					content: "";
-					box-shadow: 7px 7px 9px 0px rgba(0, 0, 0, 0.12);
+					content: "";				
 				}
 
 				&:after {
@@ -778,36 +777,57 @@
 	z-index: 10;
 	top: 0;
 	left: 0;
-	border-radius: 10px;
 	background: #fff;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
 
 	.layer_pop_header {
-		height: 58px;
-		padding-top: 15px;
-		border-bottom: 1px solid $line_color3;
-		font-size: $fz22px;
+		flex: none;
+		height: 48px;
+		padding-top: 13px;
+		border-bottom: 1px solid #d5d5d5;		
 		text-align: center;
-		color: $color_level1;
-
-		.dot {
-			display: inline-block;
-			margin: -4px 4px 0;
-			vertical-align: top;
+		.title{
+			font-size: $fz18px;
+			color: $color_level2;
+			font-weight: 700;
 		}
 	}
 
 	.layer_pop_content {
-		padding: 0 40px 30px;
+		flex: 1;
+		overflow: auto;
+	}
 
-		.table_scroll {
-			margin: 0 -15px 0 0;
+	.layer_pop_bottom{
+		flex: none;
+		height: 45px;
+		.btn_area {
+			text-align: center;
+			height:100%;
+			width:100%;
+			display: flex;
+			.btn_text{
+				flex: 1;
+				height:100%;
+				border-radius: 0;
+				font-size: $fz15px;
+				border:none;
+				line-height: 45px;
+				font-weight: 700;
+			}
 		}
 	}
 
 	.btn_close {
 		position: absolute;
-		top: 10px;
-		right: 23px;
+		top: 13px;
+		right: 13px;
+		width:20px;
+		height:20px;
+		background: url(/resources/images/gu.renew.common/btn_close_gray.png) no-repeat;
+		background-size: 100% auto;
 	}
 
 	.note_box {
@@ -819,32 +839,40 @@
 			font-size: $fz12px;
 		}
 	}
-
-	.btn_area {
-		text-align: center;
-	}
+	
 }
 
 .pop_alert {
-	width: 380px;
-	height: 255px;
+	width: 285px;
+	height: 172px;	
+	border-radius: 8px;
+	.layer_pop_header{
+		.title{
+			font-size: $fz16px;
+		}
+	}
+
 
 	.center_box {
 		display: table;
 		width: 100%;
-		height: 127px;
+		height: 100%;
 		text-align: center;
 
 		> div {
 			display: table-cell;
-			font-size: $fz20px;
+			font-size: $fz16px;
 			vertical-align: middle;
-			letter-spacing: -0.075em;
+			letter-spacing: -0.05em;
 			color: $color_level2;
+			font-weight: 700;
+			&.txt{
+				padding-top: 10px;
+			}
 		}
 
 		.input_set {
-			margin: 0 5px;
+			margin: 0 15px;
 
 			input {
 				width: 100%;
@@ -853,26 +881,62 @@
 				outline: none;
 				background: transparent;
 				line-height: 38px;
-			}
+				font-size: $fz13px;
+				letter-spacing: -0.05em;
 
-			&.placeholder {
-				color: $color_level5;
-			}
+				&:focus {
+					border: 1px solid #e0e4ea;
+					font-weight: bold;
+					color: $color_level2;
+				}
 
-			&::placeholder {
-				color: $color_level5;
-			}
+				&:focus + .del{
+					display: block;
+				}
+				&.placeholder {
+					color: $color_level4;
+					letter-spacing: -0.05em;
+					font-size: $fz12px;
+				}	
+				&::placeholder {
+					color: $color_level4;
+					letter-spacing: -0.05em;
+					font-size: $fz12px;
+				}	
+				&::-ms-input-placeholder {
+					color: $color_level4;
+					letter-spacing: -0.05em;
+					font-size: $fz12px;
+				}	
+				&::-webkit-input-placeholder {
+					color: $color_level4;
+					letter-spacing: -0.05em;
+					font-size: $fz12px;
+				}	
+				&::-moz-placeholder {
+					color: $color_level4;
+					letter-spacing: -0.05em;
+					font-size: $fz12px;
+				}
+			}	
 
-			&::-ms-input-placeholder {
-				color: $color_level5;
+			&.change {
+				.del{
+					display: block;
+				}
 			}
-
-			&::-webkit-input-placeholder {
-				color: $color_level5;
-			}
-
-			&::-moz-placeholder {
-				color: $color_level5;
+			
+			.del{
+				display: none;
+				position: absolute;
+				top:50%;
+				right:8px;
+				width:24px;
+				height:24px;
+				margin-top:-12px;
+				background: url(/resources/images/gu.renew.common/btn_del.png) no-repeat 0 0;
+				background-size: 100% auto;
+				text-indent: -9999px;
 			}
 		}
 	}
@@ -1179,84 +1243,63 @@
 	}
 }
 
+/* 가계약조회리스트 */
 .pop_conditional_contract {
-	width: 782px;
+	width:100%;
+	height: 100%;
 
-	.search_condition {
-		margin: 0 -40px 30px;;
-		padding: 20px 25px;
-		background: #f0f3f8;
-		text-align: center;
+	.layer_pop_content{
+		display: flex;
+		flex-direction: column;
+		.search_condition {
+			flex: none;
+			margin: 0 0px 10px;
+			padding: 15px 12px;
+			background: #f0f3f8;
+			text-align: center;
 
-		.sorting_list {
-			margin-bottom: 15px;
-			line-height: 1;
-			overflow: hidden;
+			.sorting_list {
+				margin-bottom: 8px;
+				line-height: 1;
+				overflow: hidden;
 
-			li {
-				display: inline-block;
-				margin: 0 12px;
+				li {
+					display: inline-block;
+					margin: 0 12px;
 
-				label {
-					font-size: $fz16px;
-					color: $color_level2;
+					label {
+						font-size: $fz14px;
+						color: $color_level2;
+						letter-spacing: -0.075em;
+					}
+				}
+			}
+
+			.date {
+				font-size: $fz15px;
+				color: $color_level2;
+				line-height: 1;
+			}
+		}
+
+		.insurance_list {
+			flex: 1;
+			overflow: auto;
+			padding: 0 12px 0;
+			margin:0;
+			.item{
+				position: relative;
+				.btn_edit{
+					position: absolute;
+					top:40px;
+					right:20px;
+					z-index:10;
 				}
 			}
 		}
-
-		.date {
-			font-size: $fz16px;
-			color: $color_level2;
-		}
 	}
 
-	.insurance_list {
-		width: 702px;
-		margin-bottom: 0;
-	}
 
-	.insurance {
-		height: 110px;
-		margin-bottom: 10px !important;
-		border: 1px solid $line_color3;
-		border-radius: 8px;
-
-		&:hover::before {
-			display: none;
-		}
-
-		.info {
-			position: relative;
-			width: 460px;
-			padding: 0px 30px 0;
-			border-right: 1px solid $line_color3;
-
-			.name {
-				margin-bottom: 15px;
-			}
-
-			.btn_edit {
-				position: absolute;
-				right: 25px;
-				bottom: 27px;
-			}
-		}
-
-		.payment {
-			width: 240px;
-			padding: 0px 30px 0;
-		}
-	}
-
-	.contract_scroll {
-		height: 515px;
-		margin: 0 -15px 0px 0;
-	}
-
-	.btn_area {
-		padding-top: 20px;
-		border-top: 1px solid #e0e4ea;
-	}
 }
 
 /* tab_content */
@@ -1346,25 +1389,27 @@
 }
 
 .btn_edit {
-	font-size: $fz14px;
+	font-size: $fz12px;
 	letter-spacing: -0.025em;
 	color: $color_level2;
 
 	&:before {
 		display: inline-block;
-		width: 18px;
-		height: 21px;
-		margin-right: 8px;
+		width: 13px;
+		height: 16px;
+		margin-right: 4px;
 		background: url(/resources/images/gu.renew.common/icon_edit_off.png) no-repeat 0 0;
+		background-size: 100% auto;
 		content: "";
 		vertical-align: top;
 	}
 
-	&:hover {
+	&:active {
 		color: #01a7c4;
 
 		&:before {
 			background: url(/resources/images/gu.renew.common/icon_edit_on.png) no-repeat 0 0;
+			background-size: 100% auto;
 		}
 	}
 }
@@ -2566,7 +2611,7 @@
 						align-self:center;
 					}
 					li.before,
-					li.after,{
+					li.after{
 						align-self:center;
 						font-size: $fz14px;
 						strong{
