권장금액/보장군 설정

--- a/mobile/resources/css/gu.renew.common.scss
+++ b/mobile/resources/css/gu.renew.common.scss
@@ -116,7 +116,7 @@ a, button {
 }
 
 button, button:active, button:focus {
-	padding: 0
+	/*padding: 0*/
 }
 
 button span, button:active span, button:focus span {
